Add d2l package installation lines to run on colab.

--- a/dl24-d2l-Performance.ipynb
+++ b/dl24-d2l-Performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8027fecc",
+   "id": "8556956c",
    "metadata": {},
    "source": [
     "# Chapter 13. Computational Performance\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd3da7a",
+   "id": "fe71ac0f",
    "metadata": {},
    "source": [
     "## Chapter 13.1 Compilers and Interpreters"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b664efaa",
+   "id": "9641412b",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d56f4a13",
+   "id": "e6964dc0",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3ab6c3fc",
+   "id": "3e6ffe0d",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bdf9aa4c",
+   "id": "0334bd6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e4442a72",
+   "id": "a0ab2644",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f68aef3e",
+   "id": "be2ab9f9",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de70ff2a",
+   "id": "95eee2b0",
    "metadata": {},
    "source": [
     "## Chapter 13.2 Asynchronous Computation"
@@ -190,8 +190,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "aa13e9ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Installation of d2l packages\n",
+    "\n",
+    "!pip install torch==2.0.0 torchvision==0.15.1\n",
+    "!pip install d2l==1.0.3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
-   "id": "a3e65ad7",
+   "id": "84668dcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bcf6b79d",
+   "id": "74f4f88b",
    "metadata": {},
    "outputs": [
     {
@@ -248,6 +261,14 @@
     "        b = torch.mm(a, a)\n",
     "    torch.cuda.synchronize(device)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d400ea30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
