Try the automatic parallelism in colab T4 (Tesla GPU) machine.

--- a/dl24-d2l-Performance.ipynb
+++ b/dl24-d2l-Performance.ipynb
@@ -296,14 +296,241 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "d400ea30",
       "metadata": {
-        "id": "d400ea30"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d400ea30",
+        "outputId": "8cc06e71-5656-4dd3-89ca-c1be4fee01ca"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[3., 3.]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ],
       "source": [
-        "# test for saving to github"
+        "# Another example  to understand the dependency graph.\n",
+        "\n",
+        "x = torch.ones((1, 2), device=device)\n",
+        "y = torch.ones((1, 2), device=device)\n",
+        "z = x * y + 2\n",
+        "z"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Chapter 13.3 Automatci Parallelism\n"
+      ],
+      "metadata": {
+        "id": "Poi8DZCjfgmr"
+      },
+      "id": "Poi8DZCjfgmr"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "devices = d2l.try_all_gpus()\n",
+        "\n",
+        "def run(x):\n",
+        "  return [x.mm(x) for _ in range(50)]\n",
+        "\n",
+        "x_gpu1 = torch.rand(size=(4000, 4000), device=devices[0])\n",
+        "x_gpu2 = torch.rand(size=(4000, 4000), device=devices[1])"
+      ],
+      "metadata": {
+        "id": "0rXhT9eZffFg"
+      },
+      "id": "0rXhT9eZffFg",
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "run(x_gpu1)\n",
+        "run(x_gpu2)\n",
+        "\n",
+        "torch.cuda.synchronize(devices[0])\n",
+        "torch.cuda.synchronize(devices[1])\n",
+        "\n",
+        "with d2l.Benchmark('GPU 1 time'):\n",
+        "  run(x_gpu1)\n",
+        "  torch.cuda.synchronize(devices[0])\n",
+        "\n",
+        "with d2l.Benchmark('GPU 2 time'):\n",
+        "  run(x_gpu2)\n",
+        "  torch.cuda.synchronize(devices[1])\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0zTB7ILlgKpd",
+        "outputId": "b50df5ed-5438-474b-9b3f-190c083ebf86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "0zTB7ILlgKpd",
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GPU 1 time: 1.9003 sec\n",
+            "GPU 2 time: 1.9108 sec\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with d2l.Benchmark('GPU1 & GPU2'):\n",
+        "  run(x_gpu1)\n",
+        "  run(x_gpu2)\n",
+        "  torch.cuda.synchronize()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "CaQqwNfzg9iN",
+        "outputId": "18880a01-a01d-4fc9-88cf-7c7e748be7e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "CaQqwNfzg9iN",
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GPU1 & GPU2: 3.6658 sec\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def copy_to_cpu(x, non_blocking=False):\n",
+        "  return [y.to('cpu', non_blocking=non_blocking) for y in x]\n",
+        "\n",
+        "with d2l.Benchmark('Run on GPU1'):\n",
+        "  y = run(x_gpu1)\n",
+        "  torch.cuda.synchronize()\n",
+        "\n",
+        "with d2l.Benchmark('Run on CPU'):\n",
+        "  y_cpu = copy_to_cpu(y)\n",
+        "  torch.cuda.synchronize()"
+      ],
+      "metadata": {
+        "id": "TyyrzVK5hNCo",
+        "outputId": "187a7207-8707-4a4f-b20d-ec253105c50a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "TyyrzVK5hNCo",
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Run on GPU1: 1.9252 sec\n",
+            "Run on CPU: 3.2244 sec\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with d2l.Benchmark('Run on GPU1 and copy to CPU'):\n",
+        "  y = run(x_gpu1)\n",
+        "  y_cpu = copy_to_cpu(y, True)\n",
+        "  torch.cuda.synchronize()"
+      ],
+      "metadata": {
+        "id": "V4hRcF9KiCWm",
+        "outputId": "67b990fe-6979-4185-92d8-5346d9ed826d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "V4hRcF9KiCWm",
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Run on GPU1 and copy to CPU: 2.6150 sec\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Chapter 13.4 Hardware"
+      ],
+      "metadata": {
+        "id": "K4Jt4lMYih9z"
+      },
+      "id": "K4Jt4lMYih9z"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!nvidia-smi"
+      ],
+      "metadata": {
+        "id": "iPQ3hojTiTvJ",
+        "outputId": "c4d2865e-bab6-4436-82a0-c99282bc121b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "iPQ3hojTiTvJ",
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mon Jan 29 04:48:12 2024       \n",
+            "+---------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 535.104.05             Driver Version: 535.104.05   CUDA Version: 12.2     |\n",
+            "|-----------------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                      |               MIG M. |\n",
+            "|=========================================+======================+======================|\n",
+            "|   0  Tesla T4                       Off | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   77C    P0              35W /  70W |   6503MiB / 15360MiB |      0%      Default |\n",
+            "|                                         |                      |                  N/A |\n",
+            "+-----------------------------------------+----------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+---------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                            |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+            "|        ID   ID                                                             Usage      |\n",
+            "|=======================================================================================|\n",
+            "+---------------------------------------------------------------------------------------+\n"
+          ]
+        }
       ]
     }
   ],
