Run the counter example of leptonai.

--- a/dl24-leptonai.ipynb
+++ b/dl24-leptonai.ipynb
@@ -22,48 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7c349b6a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Run\n",
-      "\n",
-      "Automatically inferred parameters from openapi:\n",
-      "\n",
-      "Input Schema (*=required):\n",
-      "  inputs*: (str | array[str])\n",
-      "  top_k: (int | None)\n",
-      "  top_p: (float | None)\n",
-      "  temperature: (float | None) (default: 1.0)\n",
-      "  repetition_penalty: (float | None)\n",
-      "  max_new_tokens: (int | None)\n",
-      "  max_time: (float | None)\n",
-      "  return_full_text: bool (default: True)\n",
-      "  num_return_sequences: int (default: 1)\n",
-      "  do_sample: bool (default: True)\n",
-      "\n",
-      "Example input:\n",
-      "  inputs: I enjoy walking with my cute dog\n",
-      "  max_new_tokens: 50\n",
-      "  do_sample: True\n",
-      "  top_k: 50\n",
-      "  top_p: 0.95\n",
-      "\n",
-      "Output Schema:\n",
-      "  output: (str | array[str])\n",
-      "what you can do for me? I promise! ) -Zia\n",
-      "\n",
-      "\n",
-      "GO TO « Search » »\n",
-      "\n",
-      "To Do List:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from leptonai.client import Client, local\n",
     "c = Client(local(port=8080))\n",
@@ -75,62 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a181b6b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Run\n",
-      "\n",
-      "Automatically inferred parameters from openapi:\n",
-      "\n",
-      "Input Schema (*=required):\n",
-      "  inputs*: (str | array[str])\n",
-      "  top_k: (int | None)\n",
-      "  top_p: (float | None)\n",
-      "  temperature: (float | None) (default: 1.0)\n",
-      "  repetition_penalty: (float | None)\n",
-      "  max_new_tokens: (int | None)\n",
-      "  max_time: (float | None)\n",
-      "  return_full_text: bool (default: True)\n",
-      "  num_return_sequences: int (default: 1)\n",
-      "  do_sample: bool (default: True)\n",
-      "\n",
-      "Example input:\n",
-      "  inputs: I enjoy walking with my cute dog\n",
-      "  max_new_tokens: 50\n",
-      "  do_sample: True\n",
-      "  top_k: 50\n",
-      "  top_p: 0.95\n",
-      "\n",
-      "Output Schema:\n",
-      "  output: (str | array[str])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(c.run.__doc__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a449e061",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, world. On 'I am Mr Universe' we made the most number of revolutionaries.\"\n",
-      "\n",
-      "Northern Power and Radio Wales director Simon Neville tweeted: \"Reaction from #domvicta fandom in response to second fantastic documentary of Tony's\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(c.run(inputs=\"Hello, world.\"))"
    ]
@@ -150,6 +70,84 @@
     "print(c.paths())\n",
     "\n",
     "# will print the doc for c.echo. You can also use "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a8ad623",
+   "metadata": {},
+   "source": [
+    "## Counter example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "32728331",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<leptonai.client.Client at 0x7f86835a0130>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from leptonai.client import Client, local\n",
+    "\n",
+    "c = Client(local(port=8080))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "84f62656",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Add\n",
+      "\n",
+      "Automatically inferred parameters from openapi:\n",
+      "\n",
+      "Input Schema (*=required):\n",
+      "  x*: int\n",
+      "\n",
+      "Output Schema:\n",
+      "  output: int\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c.add.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4e22cdd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.add(x=10)"
    ]
   }
  ],
