--- a/dl24-openai-api.ipynb
+++ b/dl24-openai-api.ipynb
@@ -2,47 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c19404a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting openai\n",
-      "  Downloading openai-1.12.0-py3-none-any.whl.metadata (18 kB)\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from openai) (4.0.0)\n",
-      "Collecting distro<2,>=1.7.0 (from openai)\n",
-      "  Downloading distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
-      "Collecting httpx<1,>=0.23.0 (from openai)\n",
-      "  Downloading httpx-0.26.0-py3-none-any.whl.metadata (7.6 kB)\n",
-      "Requirement already satisfied: pydantic<3,>=1.9.0 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from openai) (2.4.2)\n",
-      "Requirement already satisfied: sniffio in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from openai) (1.3.0)\n",
-      "Requirement already satisfied: tqdm>4 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from openai) (4.66.1)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.7 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from openai) (4.8.0)\n",
-      "Requirement already satisfied: idna>=2.8 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from anyio<5,>=3.5.0->openai) (3.4)\n",
-      "Requirement already satisfied: exceptiongroup>=1.0.2 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from anyio<5,>=3.5.0->openai) (1.1.3)\n",
-      "Requirement already satisfied: certifi in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from httpx<1,>=0.23.0->openai) (2023.7.22)\n",
-      "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
-      "  Downloading httpcore-1.0.3-py3-none-any.whl.metadata (20 kB)\n",
-      "Collecting h11<0.15,>=0.13 (from httpcore==1.*->httpx<1,>=0.23.0->openai)\n",
-      "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: annotated-types>=0.4.0 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from pydantic<3,>=1.9.0->openai) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.10.1 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from pydantic<3,>=1.9.0->openai) (2.10.1)\n",
-      "Downloading openai-1.12.0-py3-none-any.whl (226 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m226.7/226.7 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading distro-1.9.0-py3-none-any.whl (20 kB)\n",
-      "Downloading httpx-0.26.0-py3-none-any.whl (75 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.9/75.9 kB\u001b[0m \u001b[31m13.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading httpcore-1.0.3-py3-none-any.whl (77 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.0/77.0 kB\u001b[0m \u001b[31m14.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: h11, distro, httpcore, httpx, openai\n",
-      "Successfully installed distro-1.9.0 h11-0.14.0 httpcore-1.0.3 httpx-0.26.0 openai-1.12.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install openai packages\n",
     "\n",
@@ -51,18 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "04349401",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OPENAI_API_KEY=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\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -73,41 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "377ae05e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In the land of code where functions roam,\n",
-      "There dwells a technique, both skillful and bold.\n",
-      "Recursion, its name, a concept profound,\n",
-      "A mystical loop where magic is found.\n",
-      "\n",
-      "A function calling itself, oh what a sight,\n",
-      "A loop within a loop, endlessly bright.\n",
-      "Like a mirror reflecting its own reflection,\n",
-      "Recursion delves deep, a code connection.\n",
-      "\n",
-      "A task is divided, then conquered with grace,\n",
-      "Each step resolved in a recursive embrace.\n",
-      "Through subproblems solved, the answer reveals,\n",
-      "As each recursion unwinds, the solution appeals.\n",
-      "\n",
-      "Like a fractal unfolding, patterns emerge,\n",
-      "Infinite possibilities, the code does surge.\n",
-      "Tread carefully, dear programmer, in this recursive dance,\n",
-      "For in its beauty lies both risk and chance.\n",
-      "\n",
-      "So embrace this concept, with wonder and awe,\n",
-      "In the realm of recursion, let your code draw.\n",
-      "For in its elegant simplicity, complexity unfurls,\n",
-      "And the power of recursion transforms your world.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Try OpenAI API calls\n",
     "\n",
@@ -135,7 +59,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6da5d76b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9ef80da6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! env | grep API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "22980556",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "import os\n",
+    "\n",
+    "# Load .env file for the OpenAI API key!\n",
+    "import dotenv\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "client = OpenAI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "028eaeff",
    "metadata": {},
    "outputs": [],
    "source": []
