Finished the llamaindex starter examples.

--- a/dl24-llamaindex-starter.ipynb
+++ b/dl24-llamaindex-starter.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "7b3f94d1",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "d917b6dc",
    "metadata": {},
    "outputs": [],
@@ -250,95 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "b96733b3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67a05bcd00ee48fda8e83ccc5a422b02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/743 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8407a506424460686f491af5636c95d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/133M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d683e8c7cf6342628378352735b9bb84",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/366 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "430cd127a1424eab841466e0981fa33e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55b823e9782c430c8fa48e8a48e7be34",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/711k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "557ba4b262b840f8b8ca0e25d0235ffd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/125 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# bge-m3 embedding model\n",
     "Settings.embed_model = resolve_embed_model(\"local:BAAI/bge-small-en-v1.5\")\n",
@@ -381,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "6d91442c",
    "metadata": {},
    "outputs": [
@@ -389,14 +304,146 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The text in the provided context information appears to be an essay written by Paul Graham describing his experience of creating a new programming language called Bel. The essay covers the challenges he faced while developing Bel and the motivation behind his decision to take on this project. He also discusses how he had to limit other activities such as writing essays during the development process due to the complexity of the problem. Additionally, there are notes that mention Paul's past experiences with computers and leaving YC (Y Combinator).\n"
+      " The essay describes the author's experience of writing essays and choosing what to work on. He reflects on his past and how he made decisions about what projects to pursue. He writes that he was surprised by how long and messy the answer turned out to be when trying to answer this question for himself, leading him to share it with others. The essay also touches upon the evolution of computers and the impact of technology on various industries, including art and software development. The author shares his experiences with Y Combinator and the challenges of publishing online versus putting things on the internet. He concludes by discussing the importance of being independent-minded in rapidly changing fields and the limitations of customs that persist despite new realities.\n"
      ]
     }
    ],
    "source": [
-    "response = query_engine.query(\"the contents of the book\")\n",
+    "response = query_engine.query(\"Please summarize this essay.\")\n",
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70f187eb",
+   "metadata": {},
+   "source": [
+    "## Queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6e3e359a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Subject: Reflections on Your Early Experiences with Writing and Programming\n",
+      "\n",
+      "Dear User,\n",
+      "\n",
+      "I hope this message finds you well. I recently came across your essay describing the two main things you worked on before college - writing and programming. It was a fascinating read, bringing back memories of my own early experiences.\n",
+      "\n",
+      "Before college, my primary focus outside of school was also divided between writing and programming. However, unlike you, I didn't encounter an IBM 1401 or face the challenge of working with punch cards. Instead, I started writing essays, although they were far from what a beginning writer should aim for. The first programs I attempted to write were in BASIC on a Commodore PET computer.\n",
+      "\n",
+      "Your story about learning the importance of terminating programs on the IBM 1401 resonated with me. I remember the frustration and excitement when I was finally able to get my TRS-80 to run my first programs without errors. It's amazing how much has changed since those early days, and yet the core essence of programming remains the same - solving problems and making things work.\n",
+      "\n",
+      "The shift from philosophy to AI in college is a path many have taken. I too was drawn to the promise of artificial intelligence and the potential it held for unlocking new possibilities. Your experiences with Heinlein's The Moon is a Harsh Mistress and Terry Winograd's use of SHRDLU mirror my own fascination with AI in the 1980s.\n",
+      "\n",
+      "As you continue to explore new opportunities, I encourage you to reflect on your past experiences and how they have shaped your perspectives. You've come a long way from those early days, and the skills and knowledge you gained during that time will undoubtedly serve you well in whatever you choose to pursue next.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "[Your Name]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_engine = index.as_query_engine()\n",
+    "\n",
+    "response = query_engine.query(\n",
+    "    \"Write an email to the user given their background information.\"\n",
+    ")\n",
+    "\n",
+    "print(response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "cc3cecbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The author's experiences during grad school at Harvard University sparked his curiosity about artificial intelligence and led him to explore Lisp programming. After graduation, he delved deeper into computer science and authored numerous essays on various topics. In the late 1990s, in collaboration with Jessica Livingston, he founded Y Combinator, a renowned startup incubator that has since grown significantly.\n",
+      "\n",
+      "However, the unexpected surge in page views on his essays came as a surprise to him. He realized anyone could publish their work online and reach an audience, unlike the limited channels available during the print era. This realization marked a turning point for him, leading him to focus more on writing essays while also working on other projects.\n",
+      "\n",
+      "While there were many unconventional aspects of his career path, he found success in embracing the less prestigious forms of work, such as essays and building web applications. These experiences taught him valuable lessons about discovering new opportunities and staying motivated by the right reasons.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Customize the query stages\n",
+    "\n",
+    "from llama_index.core import VectorStoreIndex, get_response_synthesizer\n",
+    "from llama_index.core.retrievers import VectorIndexRetriever\n",
+    "from llama_index.core.query_engine import RetrieverQueryEngine\n",
+    "from llama_index.core.postprocessor import SimilarityPostprocessor\n",
+    "\n",
+    "# build index\n",
+    "index = VectorStoreIndex.from_documents(documents)\n",
+    "\n",
+    "# confgiure retriever\n",
+    "retriever = VectorIndexRetriever(\n",
+    "    index=index,\n",
+    "    similarity_top_k=10,\n",
+    ")\n",
+    "\n",
+    "# configure response synthesizer\n",
+    "response_synthesizer = get_response_synthesizer()\n",
+    "\n",
+    "# assemble query engine\n",
+    "query_engine = RetrieverQueryEngine(\n",
+    "    retriever = retriever,\n",
+    "    response_synthesizer = response_synthesizer,\n",
+    "    node_postprocessors = [SimilarityPostprocessor(similarity_cutoff=0.3)],\n",
+    ")\n",
+    "\n",
+    "# query\n",
+    "response = query_engine.query(\"What did the author do growing up?\")\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "1f262f25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The essay recounts Paul Graham's diverse experiences in computer science, art, entrepreneurship, and writing. In his graduate studies at Harvard University, he became disillusioned with natural language understanding in AI and shifted to Lisp programming. After a stint as an artist, he co-founded Viaweb, an e-commerce platform, which was later acquired by Yahoo. Subsequently, Paul Graham, along with Jessica Livingston, Robert Morris, and Trevor Blackwell, established Y Combinator, a successful startup incubator. The essay offers insights into the origins of Y Combinator and its growth from an idea to a thriving organization. Throughout his career, Graham discusses the role of customs and constraints in shaping his choices, as well as his thoughts on invented versus discovered ideas.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_index.core import SummaryIndex\n",
+    "\n",
+    "index = SummaryIndex.from_documents(documents)\n",
+    "\n",
+    "query_engine = index.as_query_engine(response_mode=\"tree_summarize\")\n",
+    "\n",
+    "response = query_engine.query(\"Please summarize the essay.\")\n",
+    "\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2f527db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
