Continue the llamaindex deep dive.

--- a/dl24-llamaindex-deepdive.ipynb
+++ b/dl24-llamaindex-deepdive.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f2a10761",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d0f09cf4",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "e3dce43c",
    "metadata": {},
    "outputs": [],
@@ -132,6 +132,52 @@
     "# load the Paul Graham essay for context\n",
     "documents = SimpleDirectoryReader(\"../data/llamaindex\").load_data()\n",
     "index = VectorStoreIndex.from_documents(documents,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "86be446b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The letter is a message from the Chief Executive Officer (CEO) of Markel, Thomas S. Gayner, to the shareholders. In this letter, he expresses his gratitude for their role as customers, associates, and/or shareholders of Markel. He also mentions that they have experienced significant growth in their share price since going public. Additionally, he refers to the annual meeting which will be held on May 17, 2023, and encourages attendance for the opportunity to connect with the management team and engage in conversations. The letter also touches upon the importance of their work and the impact it has on customers, associates, and shareholders. However, the letter does not provide any specific newsworthy information regarding recent developments or current events at Markel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_engine = index.as_query_engine()\n",
+    "\n",
+    "response = query_engine.query(\n",
+    "    \"What's the latest news of Markel?\"\n",
+    ")\n",
+    "\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5594a469",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " In 2022, Markel reported total operating revenues of $11,675 million, gross written premiums of $13,202 million, a combined ratio of 92%, invested assets of $27,420 million, and invested assets per common share of $2,042.73. The net income (loss) to common shareholders was $(250) million, and the comprehensive income (loss) to shareholders was $(1,309) million. The company's shareholders' equity was $13,066 million, with a book value per common share of $929.27. Additionally, Markel reported a 5-year CAGR in book value per common share of 6% and a closing stock price per share of $1,317.49. The financial results represent the outcome of the dedication and effort put forth by the company's people.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = query_engine.query(\n",
+    "    \"What's the financial results of Markel in 2022?\"\n",
+    ")\n",
+    "\n",
+    "print(response)"
    ]
   },
   {
@@ -144,11 +190,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "c8ea8278",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<llama_index.core.query_engine.retriever_query_engine.RetrieverQueryEngine at 0x7f5d294b51e0>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from llama_index.core import VectorStoreIndex\n",
+    "\n",
+    "vector_index = VectorStoreIndex.from_documents(documents)\n",
+    "vector_index.as_query_engine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "79a6b4c4",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "\n",
+    "# parse nodes\n",
+    "parser = SentenceSplitter()\n",
+    "nodes = parser.get_nodes_from_documents(documents)\n",
+    "\n",
+    "# build index\n",
+    "index = VectorStoreIndex(nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "84185a1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Markel Corporation's Chief Executive Officer, Thomas S. Gayner, expresses gratitude to customers, associates, and shareholders in a letter. He mentions that just as Cal Ripken Jr. and Bill Russell have been instrumental in their respective fields, the team at Markel is dedicated to their work and could not do it without the support of their stakeholders. Additionally, he invites everyone to attend the annual meeting on May 17, 2023, for a chance to connect with the management team and engage in thoughtful discussions. The letter also touches upon the growth in Markel's share price since going public and the importance of each win for customers, associates, and shareholders.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_engine = index.as_query_engine()\n",
+    "\n",
+    "response = query_engine.query(\n",
+    "    \"What's the latest news of Markel?\"\n",
+    ")\n",
+    "\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aa87e70",
+   "metadata": {},
+   "source": [
+    "## Indexing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a6e0011",
+   "metadata": {},
+   "source": [
+    "* A VectorStoreIndex is by far the most frequent type of Index you’ll encounter. The Vector Store Index takes your Documents and splits them up into Nodes. It then creates vector embeddings of the text of every node, ready to be queried by an LLM."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77b30647",
+   "metadata": {},
+   "source": [
+    "* A Summary Index is a simpler form of Index best suited to queries where, as the name suggests, you are trying to generate a summary of the text in your Documents. It simply stores all of the Documents and returns all of them to your query engine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1e90dbf",
+   "metadata": {},
+   "source": [
+    "## Storing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0084fcda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store the index into files\n",
+    "\n",
+    "index.storage_context.persist(persist_dir=\"../data/llamaindex/temp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f868256b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get back from reading\n",
+    "\n",
+    "from llama_index.core import StorageContext, load_index_from_storage\n",
+    "\n",
+    "storage_context = StorageContext.from_defaults(persist_dir=\"../data/llamaindex/temp\")\n",
+    "\n",
+    "# load index\n",
+    "index = load_index_from_storage(storage_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3f7e682",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open source vector store of chroma\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
