--- a/dl24-d2l-NLP-Pretraining.ipynb
+++ b/dl24-d2l-NLP-Pretraining.ipynb
@@ -1666,11 +1666,355 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4d00b622",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_centers_and_contexts(corpus, max_window_size):\n",
+    "    \"\"\"Return center words and context words in skip-garm.\"\"\"\n",
+    "    \n",
+    "    centers, contexts = [], []\n",
+    "    for line in corpus:\n",
+    "        \n",
+    "        if len(line) < 2:\n",
+    "            continue\n",
+    "        centers += line\n",
+    "    \n",
+    "        for i in range(len(line)):\n",
+    "            window_size = random.randint(1, max_window_size)\n",
+    "            indices = list(range(max(0, i - window_size), \n",
+    "                            min(len(line), i + 1 + window_size)))\n",
+    "            indices.remove(i)\n",
+    "            contexts.append([line[idx] for idx in indices])\n",
+    "    return centers, contexts\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b5873128",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset [[0, 1, 2, 3, 4, 5, 6], [7, 8, 9]]\n",
+      "center 0 has contexts [1, 2]\n",
+      "center 1 has contexts [0, 2]\n",
+      "center 2 has contexts [1, 3]\n",
+      "center 3 has contexts [1, 2, 4, 5]\n",
+      "center 4 has contexts [3, 5]\n",
+      "center 5 has contexts [3, 4, 6]\n",
+      "center 6 has contexts [4, 5]\n",
+      "center 7 has contexts [8, 9]\n",
+      "center 8 has contexts [7, 9]\n",
+      "center 9 has contexts [8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tiny_dataset = [list(range(7)), list(range(7, 10))]\n",
+    "print('dataset', tiny_dataset)\n",
+    "for center, context in zip(*get_centers_and_contexts(tiny_dataset, 2)):\n",
+    "    print('center', center, 'has contexts', context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "22f25e4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'# center-context pairs: 1501554'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_centers, all_contexts = get_centers_and_contexts(corpus, 5)\n",
+    "f'# center-context pairs: {sum([len(contexts) for contexts in all_contexts])}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f01eb902",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 15.3.4 Negative Sampling\n",
+    "\n",
+    "class RandomGenerator:\n",
+    "    \"\"\"Randomly draw among {1, ..., n} according to n sampling weights.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, sampling_weights):\n",
+    "        self.population = list(range(1, len(sampling_weights) + 1))\n",
+    "        self.sampling_weights = sampling_weights\n",
+    "        self.candidates = []\n",
+    "        self.i = 0\n",
+    "        \n",
+    "    def draw(self):\n",
+    "        if self.i == len(self.candidates):\n",
+    "            self.candidates = random.choices(\n",
+    "                self.population, self.sampling_weights, k=10000)\n",
+    "            self.i = 0\n",
+    "        self.i += 1\n",
+    "        \n",
+    "        return self.candidates[self.i - 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "20728744",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 1, 3, 3, 3, 1, 3, 2, 3]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generator = RandomGenerator([2, 3, 4])\n",
+    "[generator.draw() for _ in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fb76d81e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_negatives(all_contexts, vocab, counter, K):\n",
+    "    \"\"\"Return noise words in negative sampling.\"\"\"\n",
+    "    \n",
+    "    sampling_weights = [counter[vocab.to_tokens(i)]**0.75\n",
+    "                           for i in range(1, len(vocab))]\n",
+    "    all_negatives, generator = [], RandomGenerator(sampling_weights)\n",
+    "    \n",
+    "    for contexts in all_contexts:\n",
+    "        negatives = []\n",
+    "        while len(negatives) < len(contexts) * K:\n",
+    "            neg = generator.draw()\n",
+    "            if neg not in contexts:\n",
+    "                negatives.append(neg)\n",
+    "                \n",
+    "        all_negatives.append(negatives)\n",
+    "        \n",
+    "    return all_negatives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f6bb6a30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def batchify(data):\n",
+    "    \"\"\"Return a minibatch of examples for skip-gram with negative sampling.\"\"\"\n",
+    "    \n",
+    "    max_len = max(len(c) + len(n) for _, c, n in data)\n",
+    "    centers, contexts_negatives, masks, labels = [], [], [], []\n",
+    "    \n",
+    "    for center, context, negative in data:\n",
+    "        cur_len = len(context) + len(negative)\n",
+    "        centers += [center]\n",
+    "        contexts_negatives += [context + negative + [0] * (max_len - cur_len)]\n",
+    "        masks += [[1] * cur_len + [0] * (max_len - cur_len)]\n",
+    "        labels += [[1] * len(context) + [0] * (max_len - len(context))]\n",
+    "    return (torch.tensor(centers).reshape((-1, 1)), torch.tensor(contexts_negatives),\n",
+    "           torch.tensor(masks), torch.tensor(labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7c99a79e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "centers = tensor([[1],\n",
+      "        [1]])\n",
+      "contexts_negatives = tensor([[2, 2, 3, 3, 3, 3],\n",
+      "        [2, 2, 2, 3, 3, 0]])\n",
+      "masks = tensor([[1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 0]])\n",
+      "labels = tensor([[1, 1, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 0, 0, 0]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_1 = (1, [2, 2], [3, 3, 3, 3])\n",
+    "x_2 = (1, [2, 2, 2], [3, 3])\n",
+    "batch = batchify((x_1, x_2))\n",
+    "\n",
+    "names = ['centers', 'contexts_negatives', 'masks', 'labels']\n",
+    "\n",
+    "for name, data in zip(names, batch):\n",
+    "    print(name, '=', data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5fc44406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# put it all together\n",
+    "\n",
+    "def load_data_ptb(batch_size, max_window_size, num_noise_words):\n",
+    "    \"\"\"Download the PTB dataset and then load it into memory.\"\"\"\n",
+    "    \n",
+    "    num_workers = d2l.get_dataloader_workers()\n",
+    "    sentences = read_ptb()\n",
+    "    vocab = d2l.Vocab(sentences, min_freq=10)\n",
+    "    subsampled, counter = subsample(sentences, vocab)\n",
+    "    corpus = [vocab[line] for line in subsampled]\n",
+    "    all_centers, all_contexts = get_centers_and_contexts(\n",
+    "        corpus, max_window_size)\n",
+    "    all_negatives = get_negatives(\n",
+    "        all_contexts, vocab, counter, num_noise_words)\n",
+    "    \n",
+    "    \n",
+    "    class PTBDataset(torch.utils.data.Dataset):\n",
+    "        def __init__(self, centers, contexts, negatives):\n",
+    "            assert len(centers) == len(contexts) == len(negatives)\n",
+    "            self.centers = centers\n",
+    "            self.contexts = contexts\n",
+    "            self.negatives = negatives\n",
+    "            \n",
+    "        def __getitem__(self, index):\n",
+    "            return (self.centers[index], self.contexts[index], self.negatives[index])\n",
+    "        \n",
+    "        def __len__(self):\n",
+    "            return len(self.centers)\n",
+    "        \n",
+    "    dataset = PTBDataset(all_centers, all_contexts, all_negatives)\n",
+    "    \n",
+    "    data_iter = torch.utils.data.DataLoader(dataset, batch_size, shuffle=True, \n",
+    "                                            collate_fn=batchify,\n",
+    "                                           num_workers=num_workers)\n",
+    "    \n",
+    "    return data_iter, vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "59a59434",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "centers shape: torch.Size([512, 1])\n",
+      "contexts_negatives shape: torch.Size([512, 60])\n",
+      "masks shape: torch.Size([512, 60])\n",
+      "labels shape: torch.Size([512, 60])\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_iter, vocab = load_data_ptb(512, 5, 5)\n",
+    "for batch in data_iter:\n",
+    "    for name, data in zip(names, batch):\n",
+    "        print(name, 'shape:', data.shape)\n",
+    "        \n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37a983db",
+   "metadata": {},
+   "source": [
+    "* High-frequency words may not be so useful in training. We can subsample them for speedup in training.\n",
+    "* For computational efficiency, we load examples in minibatches. We can define other variables to distinguish paddings from non-paddings, and positive examples from negative ones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86470504",
+   "metadata": {},
+   "source": [
+    "## Chapter 15.4 Pretraining word2vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c5827356",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from d2l import torch as d2l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3c77f85a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size, max_window_size, num_noise_words = 512, 5, 5\n",
+    "data_iter, vocab = d2l.load_data_ptb(batch_size, max_window_size, num_noise_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "22970b86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The Skip-Gram Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ad50e15c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter embedding_weight (torch.Size([20, 4]), dtype=torch.float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "embed = nn.Embedding(num_embeddings=20, embedding_dim=4)\n",
+    "print(f'Parameter embedding_weight ({embed.weight.shape}, '\n",
+    "     f'dtype={embed.weight.dtype})')"
+   ]
   }
  ],
  "metadata": {
